| Summary: | ASTERISK-22672: Crash when dialing back to same device from dialplan when endpoint have outbound_proxy set. | ||
| Reporter: | Antti Yrjölä (ayrjola) | Labels: | |
| Date Opened: | 2013-10-09 13:40:10 | Date Closed: | 2013-10-10 07:27:03 |
| Priority: | Critical | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 12.0.0-alpha1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Linux ayrjola-debian 3.2.0-4-amd64 #1 SMP Debian 3.2.46-1+deb7u1 x86_64 GNU/Linux | Attachments: | |
| Description: | Crash when calling back to extension that made the call, with endpoint setting outbound_proxy. | ||
| Comments: | By: Antti Yrjölä (ayrjola) 2013-10-09 13:41:21.514-0500 #0 0x00007f5a6d3e7475 in raise () from /lib/x86_64-linux-gnu/libc.so.6 #1 0x00007f5a6d3ea6f0 in abort () from /lib/x86_64-linux-gnu/libc.so.6 #2 0x00007f5a6d3e0621 in __assert_fail () from /lib/x86_64-linux-gnu/libc.so.6 #3 0x00007f5a6979ccfd in pjsip_dlg_terminate () from /usr/local/lib/libpjsip.so.2 #4 0x00007f5a65502c2d in ast_sip_create_dialog_uac (endpoint=endpoint@entry=0x136a1e0, uri=<optimized out>, request_user=request_user@entry=0x0) at res_pjsip.c:1404 #5 0x00007f5a6656f150 in ast_sip_session_create_outgoing (endpoint=endpoint@entry=0x136a1e0, location=0x136e8c0 "6001", request_user=request_user@entry=0x0, req_caps=0x1747970) at res_pjsip_session.c:1198 #6 0x00007f5a527986b7 in request (obj=0x7f5a4658bc60) at chan_pjsip.c:1741 #7 0x00007f5a655014fb in sync_task (data=0x7f5a4658bbb0) at res_pjsip.c:1730 #8 0x00000000005b8920 in ast_taskprocessor_execute (tps=0x1315e78) at taskprocessor.c:769 #9 0x00000000005be058 in threadpool_execute (pool=0x1317f08) at threadpool.c:351 #10 0x00000000005bf557 in worker_active (worker=0x131c0c8) at threadpool.c:1072 #11 0x00000000005bf313 in worker_start (arg=0x131c0c8) at threadpool.c:992 #12 0x00000000005ca8dc in dummy_start (data=0x13159a0) at utils.c:1169 #13 0x00007f5a6bc0db50 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0 #14 0x00007f5a6d48fa7d in clone () from /lib/x86_64-linux-gnu/libc.so.6 #15 0x0000000000000000 in ?? () By: Antti Yrjölä (ayrjola) 2013-10-09 13:45:37.294-0500 Dialplan: [from-internal] exten => 6000,1,Playback(tt-monkeys) exten => 6000,n,Hangup() exten => 7000,1,set(CALLERID(name)=Antti Yrjölä) exten => 7000,n,Dial(PJSIP/6001) exten => 7000,n,Hangup() CLI: -- Executing [7000@from-internal:1] Set("PJSIP/6001-00000000", "CALLERID(name)=Antti Yrjölä") in new stack -- Executing [7000@from-internal:2] Dial("PJSIP/6001-00000000", "PJSIP/6001") in new stack ayrjola-debian*CLI> Disconnected from Asterisk server Asterisk cleanly ending (0). Executing last minute cleanups endpoint: [6001] type=endpoint transport=transport-udp context=from-internal outbound_proxy=192.168.56.102 disallow=all allow=ulaw ;allow=gsm auth=6001 aors=6001 [6001] type=auth auth_type=userpass password=6001 username=6001 [6001] type=aor max_contacts=1 qualify_frequency=10 ; Interval at which to qualify an AoR (default: "0") ;contact=sip:6001@192.0.2.1:5060 | ||